# sensing-aruco

./: .gitignore  CMakeLists.txt  README.md  dev_steps.md  environment.yml  main.py  package.xml  pyproject.toml
aruco_marker/: model.config  model.sdf
aruco_marker/materials/scripts/: aruco_marker.material
aruco_marker/materials/textures/: aruco.dae
aruco_marker_description/: CMakeLists.txt  package.xml
aruco_marker_description/launch/: spawn_marker_gazebo.launch
aruco_marker_description/materials/textures/: aruco_fam4x4_1000_id25_sdf.dae
aruco_marker_description/models/: model.sdf
aruco_marker_description/models/aruco_fam4x4_1000_id25_sdf/: model.sdf
camera/: model.sdf
fpv_cam_description/: CMakeLists.txt  package.xml
fpv_cam_description/calib/: fpv_cam.yaml
fpv_cam_description/models/: fpv_cam.sdf
launch/: aruco.launch  gazebo.launch  view_d435_model.launch  view_d435_model_rviz_gazebo.launch
scripts/: aruco_pose.py  aruco_pose_estimator.py  cam_pose_changer.py  cam_pose_changer_lite.py  estimates.txt  estimates_bckp.txt  get_cam_pose.py  gt.txt  gt_bckp.txt  img_getter.py  img_getter_bckp.py  listener.py  plot.py  test.npy
scripts/calibration_data/: ost.txt  ost.yaml
scripts/calibrationdata/: ost.txt  ost.yaml
sense_aruco/: CMakeLists.txt  package.xml  pyproject.toml  setup.py
sense_aruco/calib/gazebo_cams/: px4_fpv_cam.yaml  realsense_d435_cam.yaml
sense_aruco/launch/: camera_with_marker.launch  gazebo.launch  view_d435_model.launch  view_d435_model_rviz_gazebo.launch
sense_aruco/scripts/: aruco_pose_estimator.py  aruco_pose_estimator_node.py
sense_aruco/src/sense_aruco/: aruco_estimator.py  detector.py
sense_aruco/world/: aruco.world  aruco_exp.world
sense_aruco_msgs/: CMakeLists.txt  package.xml
sense_aruco_ros/: CMakeLists.txt  package.xml
sense_aruco_ros/config/: d435_gazebo_params.yaml
sense_aruco_ros/launch/: detect_markers.launch
sense_aruco_ros/msg/: MarkerArray.msg  MarkerPose.msg  MarkerPoseArray.msg
sense_aruco_ros/nodes/: aruco_detector_node  aruco_pose_estimator_node
sense_aruco_simulations/: CMakeLists.txt  package.xml
sense_aruco_simulations/launch/: camera_with_marker.launch  demo_camera_marker.launch  gazebo.launch  spawn_fpv_cam.launch
sense_aruco_simulations/models/fpv_cam/: model.sdf
sense_aruco_simulations/params/: fpv_params.yaml
sense_aruco_simulations/sdf/fpv_cam/: model.config
src/sense_aruco/: detector.py
urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  test_d435_camera.urdf.xacro  test_d435_multiple_cameras.urdf.xacro
world/: aruco_exp.world  aruco_plane.world  aruco_plane2.world  aruco_plane_trails.world
