<?xml version="1.0"?>
<package format="2">
  <name>realsense2_description</name>
  <version>3.1.7</version>
  <description>RealSense Camera description package for Intel 3D D400 cameras</description>
  <maintainer email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</maintainer>
  <maintainer email="doron.hirshberg@intel.com">Doron Hirshberg</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
