<?xml version="1.0"?>
<package format="2">
  <name>sense_aruco</name>
  <version>0.0.1</version>
  <description>A package for detecting Aruco markers.</description>
  <maintainer email="willkode@outlook.com">Troi Williams</maintainer>
  <maintainer email="sbhogavi@terpmail.umd.edu">Sparsh Bhogavilli</maintainer>
  <license>Apache 2.0</license>

  <url type="website">https://github.com/troiwill/sensing-aruco</url>
  <url type="bugtracker">https://github.com/troiwill/sensing-aruco/issues</url>

  <author email="willkode@outlook.com">Troi Williams</author>
  <author email="sbhogavi@terpmail.umd.edu">Sparsh Bhogavilli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend>realsense2_description</test_depend>
  <test_depend>realsense2_camera</test_depend>
  <test_depend>aruco_marker_description</test_depend>

</package>
