<?xml version="1.0"?>
<package format="2">
  <name>sense_aruco_msgs</name>
  <version>0.0.1</version>
  <description>ROS messages package for sense-aruco.</description>
  <maintainer email="willkode@outlook.com">Troi Williams</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/troiwill/sensing-aruco</url>
  <url type="bugtracker">https://github.com/troiwill/sensing-aruco/issues</url>

  <author email="willkode@outlook.com">Troi Williams</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sense_aruco_ros</exec_depend>

</package>
