<?xml version="1.0"?>
<package format="2">
  <name>sense_aruco_ros</name>
  <version>0.0.1</version>
  <description>ROS package for detecting Aruco markers.</description>
  <maintainer email="willkode@outlook.com">Troi Williams</maintainer>
  <maintainer email="sbhogavi@terpmail.umd.edu">Sparsh Bhogavilli</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/troiwill/sensing-aruco</url>
  <url type="bugtracker">https://github.com/troiwill/sensing-aruco/issues</url>

  <author email="willkode@outlook.com">Troi Williams</author>
  <author email="sbhogavi@terpmail.umd.edu">Sparsh Bhogavilli</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
